# PruebaTecnica

./: .env  README_BACKEND.md  README_FRONTEND.md  backup.sql  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: admin_routes.py  event_routes.py  get_current_user.py  registration_routes.py  session_routes.py  user_routes.py
backend/app/auth/: auth.py
backend/app/core/: config.py
backend/app/db/: database.py  models.py  schemas.py
backend/app/db/inserts/: init.sql
backend/app/tests/: test_main.py
backend/app/utils/: helpers.py
frontend/: Dockerfile  nginx-custom.conf  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/pages/auth/login/: login.component.css  login.component.html  login.component.ts
frontend/src/app/pages/auth/register/: register.component.css  register.component.html  register.component.ts
frontend/src/app/pages/events/all-events/: all-events.component.html  all-events.component.ts
frontend/src/app/pages/events/create-event/: create-event.component.html  create-event.component.ts
frontend/src/app/pages/events/create-session/: create-session.component.html  create-session.component.ts
frontend/src/app/pages/shared/: shared.module.ts
frontend/src/app/services/: auth.guard.ts  auth.interceptor.ts  auth.service.ts  utils.ts
frontend/src/app/success-dialog/: success-dialog.component.ts
frontend/src/environments/: environment.ts
(+34 files in other folders)
